# sdl-pal

./: sdl-pal.cabal  stack.yaml
app/: Main.hs
cbits/: win32_SetProcessDpiAware.c  win32_SetProcessDpiAware.h
src/SDL/: Pal.hs
src/SDL/Pal/: WASD.hs  Window.hs
