name:                sdl-pal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lukexi/sdl-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SDL.Pal
                       SDL.Pal.WASD
                       SDL.Pal.Window
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , text
                     , linear
                     , linear-extra
                     , lens-extra
                     , mtl
  default-language:    Haskell2010
  if os(windows)
    build-depends: Win32
    c-sources: cbits/win32_SetProcessDpiAware.c
    includes: win32_SetProcessDpiAware.h
    include-dirs: cbits

executable sdl-pal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl-pal
                     , sdl2
                     , gl
                     , time
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/lukexi/sdl-pal
